# kea-ddns-nsd

./: README.md  setup.cfg
example_kea_config/: dhcp4.conf
example_kea_config/primary/: ctrl-agent.conf  dhcp4.conf
example_kea_config/secondary/: ctrl-agent.conf  dhcp4.conf
rust/: Cargo.toml
rust/src/: main.rs
src/kea-ddns-nsd/: __main__.py
src/kea_ddns_nsd/: __main__.py  update_zonefiles.py
